--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="style.css" media="screen"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
     <title>Biolink</title>
 </head>
 
@@ -24,15 +25,15 @@
     </div>
 
     <div class="app-badge">
-        <a class="badge" href="https://play.google.com/store/apps/details?id=weghoappcustomer.droid.wegho"><img src="img/google-play-badge.svg" alt="google-play-badge"></a>
-        <a class="badge" href="https://apps.apple.com/pt/app/wegho/id1229506676?l=en"><img src="img/ios-badge.svg" alt="ios-badge"></a>
+        <a  href="https://play.google.com/store/apps/details?id=weghoappcustomer.droid.wegho"><img class="badge" src="img/google-play-badge.svg" alt="google-play-badge"></a>
+        <a  href="https://apps.apple.com/pt/app/wegho/id1229506676?l=en"><img class="badge" src="img/ios-badge.svg" alt="ios-badge"></a>
     </div>
 
     <div class="social-media">
-    <a class="socialmedia-btn" href="https://www.facebook.com/weghocom/"><img src="img/facebook.svg" alt="facebook-icon"></a>
-    <a class="socialmedia-btn" href="https://www.instagram.com/weghocom/"><img src="img/instagram.svg" alt="instagram-icon"></a>
-    <a class="socialmedia-btn" href="https://www.linkedin.com/company/27254773/admin/"><img src="img/linkedin.svg" alt="linkedin-icon"></a>
-    <a class="socialmedia-btn" href="https://www.youtube.com/channel/UCljLath3lbHNgG0NA1E-nbg"><img src="img/youtube.svg" alt="youtube-icon"></a>
+    <a href="https://www.facebook.com/weghocom/"><img class="socialmedia-btn" src="img/facebook.svg" alt="facebook-icon"></a>
+    <a href="https://www.instagram.com/weghocom/"><img class="socialmedia-btn" src="img/instagram.svg" alt="instagram-icon"></a>
+    <a href="https://www.linkedin.com/company/27254773/admin/"><img class="socialmedia-btn" src="img/linkedin.svg" alt="linkedin-icon"></a>
+    <a href="https://www.youtube.com/channel/UCljLath3lbHNgG0NA1E-nbg"><img class="socialmedia-btn"  src="img/youtube.svg" alt="youtube-icon"></a>
 </div>
 </div>
 
